--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 /* Caption text */
 .text {
   color: #000000;
-  font-size: 15px;
+  font-size: 25px;
   padding: 8px 12px;
   position: absolute;
   top: 8px;
@@ -451,49 +451,49 @@ As you move forward in your studies, always remember that education is not just 
 <div class="mySlides fade">
   <div class="numbertext">1 / 9</div>
   <img src="./gallery/TB2.jpg" style="width:100%">
-  <div class="text">At Govt Girls College Daulatpur<br>On the eve of world TB Day a Session for awareness held with collaboration of the Department of Health Taluka Qazi Ahmed SBA</div>
+  <div class="text">At Govt Girls College Daulatpur<br>On the eve of world TB Day a Session </div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 9</div>
   <img src="./gallery/TB1.jpg" style="width:100%">
-  <div class="text">At Govt Girls College Daulatpur<br>On the eve of world TB Day a Session for awareness held with collaboration of the Department of Health Taluka Qazi Ahmed SBA</div>
+  <div class="text">At Govt Girls College Daulatpur<br>On the eve of world TB Day a Session</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 9</div>
   <img src="./gallery/SB12.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">23 March Pakistan Day</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">4 / 9</div>
   <img src="./gallery/SB1.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">5 / 9</div>
   <img src="./gallery/SB2.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">6 / 9</div>
   <img src="./gallery/SB3.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">7 / 9</div>
   <img src="./gallery/SB4.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">8 / 9</div>
   <img src="./gallery/SB10.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">9 / 9</div>
   <img src="./gallery/SB11.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
