--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@ As you move forward in your studies, always remember that education is not just 
 <span class="dot" onclick="currentSlide(7)"></span> 
   <span class="dot" onclick="currentSlide(8)"></span> 
   <span class="dot" onclick="currentSlide(9)"></span> 
+<a href="Notice.html" style="font-size: 30px; text-decoration: none;">VIEW ALL</a>
 </div>
 	
     <footer>
