--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -236,7 +236,7 @@
      
 		  <p class="prof-list">
 		  Sir: Khalid Hussain Buriro &nbsp;&nbsp; (Zoology)<br><br>
-    Sir: Athar Siyal &nbsp;&nbsp;(physics :: The MCQs will be provided to you as soon as possible)<br><br>
+    Sir: Athar Ali Siyal &nbsp;&nbsp;(physics :: The MCQs will be provided to you as soon as possible)<br><br>
     Sir: Zahid Hussain Siyal &nbsp;&nbsp; (chemistry)<br><br>
 	Sir: Fida Hussain &nbsp;&nbsp; (Mathematics :: The MCQs will be provided to you as soon as possible)<br><br>
 	
@@ -2161,9 +2161,7 @@ correct: "Covalent solid",
 		
            8: { title: "12:Chemistry - Test Preparation",
             chapters: [
-                {
-                    {
-              title: "3 : ORGANIC COMPOUNDS",
+         {     title: "3 : ORGANIC COMPOUNDS",
               questions: [
                 {
                   question: "Who prepared the first organic compound?",
