--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         
         .navbar a:hover {
-            background-color: #9b1d38;
+            background-color: #FFFFE0;
             border-radius: 0.25rem;
         }
      
