--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -28,7 +28,7 @@
         }
 
         .navbar a:hover {
-            background-color: #9b1d38;
+            background-color: #FFFFFF;
             border-radius: 0.25rem;
         }
 		.container {
