--- a/CONTACT-US.html
+++ b/CONTACT-US.html
@@ -21,7 +21,10 @@
         .navbar-custom {
             background-color:  #FFF8DC; /* Blue background */
         }
-
+.navbar a:hover {
+            background-color: #FFFFFF;
+            border-radius: 0.25rem;
+        }
      
         /* Main Content */
         .content {
@@ -32,10 +35,7 @@
             padding: 2rem;
         }
 
-        .navbar a:hover {
-            background-color: #9b1d38;
-            border-radius: 0.25rem;
-        }
+        
  .contact-section {
             display: flex;
             justify-content: center;
