--- a/COLLEGE.html
+++ b/COLLEGE.html
@@ -26,7 +26,7 @@
         }
 	    
         .navbar a:hover {
-            background-color: #9b1d38;
+            background-color: #FFFFFF;
             border-radius: 0.25rem;
         }
 .image-container {
