--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -24,7 +24,7 @@
         }
 
         .navbar a:hover {
-            background-color: #9b1d38;
+            background-color: #FFFFFF;
             border-radius: 0.25rem;
         }
   
