--- a/CONTACT-US.html
+++ b/CONTACT-US.html
@@ -15,7 +15,7 @@
             line-height: 1.5;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to bottom right, #4fd1c5, #818cf8, #60a5fa);
+            background: linear-gradient(to bottom right, #E0FFFF);
         }
         /* Custom Navbar Color and Padding */
         .navbar-custom {
