--- a/CONTACT-US.html
+++ b/CONTACT-US.html
@@ -72,10 +72,91 @@
             color: #007bff; /* Icon color */
         }
 
+       .bottom-heading {
+            text-align: center;
+            font-size: 2rem;
+            font-weight: bold;
+            margin-top: 5%;
+            color: #2c3e50;
+        }
+
         /* Footer */
         footer {
             background-color: #1d4ed8;
         }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .lecturer {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+        }
+		 /* Footer styles */
+        footer {
+            background-color: #dad4d3;
+            color: #333;
+            padding: 2rem 0;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+            margin-top: auto;
+            text-align: center;
+        }
+
+        footer .container {
+            width: 90%;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        footer h2 {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 1rem;
+        }
+
+        footer ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        footer ul li {
+            margin-bottom: 0.75rem;
+        }
+
+        footer a {
+            text-decoration: none;
+            color: #666;
+            font-size: 1rem;
+            transition: color 0.3s ease;
+        }
+
+        footer a:hover {
+            color: #007BFF;
+        }
+
+        .social-icons a {
+            margin-right: 1rem;
+            font-size: 1.25rem;
+            color: #666;
+            transition: color 0.3s ease;
+        }
+
+        .social-icons a:hover {
+            color: #007BFF;
+        }
+
+        .footer-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 2rem;
+        }
+
+        .footer-grid > div {
+            display: flex;
+            flex-direction: column;
+        }
+
     </style>
 </head>
 <body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
@@ -131,12 +212,44 @@
     </div>
 
 
-
-
-    <!-- Footer -->
-    <footer class="bg-blue-600 text-white text-center py-4">
-        <p>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+<footer>
+        <div class="container">
+            <div class="footer-grid">
+                <div>
+                    <h2>About</h2>
+                    <ul>
+                        <li><a href="CONTACT-US.html" target="_self">Contact</a></li>
+                        <li><a href="Government-Girls-College-Daulatpur.html" target="_self">GGC, Daulatpur</a></li>
+                        <li><a href="COLLEGE.html" target="_self">College</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Universities Links</h2>
+                    <ul>
+                        <li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
+                        <li><a href="https://pumhs.edu.pk/" target="_self"> PUMHS University</a></li>
+                        <li><a href="https://quest.edu.pk/" target="_self"> QUAID-E-AWAM UNIVERSITY</a></li>
+                        <li><a href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
+                        <li><a href="https://www.muet.edu.pk/" target="_self"> MEHRAN University</a></li>
+                        
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                         <li><a href="https://www.lumhs.edu.pk/home/" target="_self">LUMS Jamshoro</a></li>
+                        <li><a href="https://isra.edu.pk/" target="_self"> ISRA University</a></li>
+                        <li><a href="https://www.aiou.edu.pk/" target="_self">Allama Iqbal Open University</a></li>
+                        <li><a href="https://www.uok.edu.pk/" target="_self">UNIVERSITY OF KARACHI</a></li>
+                        <li><a href="https://www.szabmu.edu.pk/" target="_self">SZABMU</a></li>
+                        <li><a href="https://www.vu.edu.pk/" target="_self">Virtual University of Pakistan</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <p style ="color: red;">&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
+
+
 <!-- Bootstrap JS and Popper.js (CDN) -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
