--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -218,8 +218,8 @@
                 <img src="gallery/SB1.jpg" alt="sir" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr. Aziz ullah phull </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Assistant Prof: Sindhi</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Gmail</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03023214307</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">phullazizullah@gmail.com</div>
 	       <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Joining Date. </div>
             </div>
           
