--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 <div class="container">
         <!-- Left Side - Image Gallery (Slideshow) -->
         <div class="left-side">
-            <h2> Prof Muhammad Suliman Siyal</h2>
+            <h2> Prof Muhammad Suleman Siyal</h2>
             <div class="gallery">
 		
                 <img src="./gallery/sir suleman.jpg" alt="Image 1">
