--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -235,7 +235,7 @@
         <!-- Gallery Group 1 -->
         <div class="gallery-group">
             
-			 <h4 style="text-align:center; font-size: 1rem; color: red;">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region<br>7-3-25</h4>
+			 <h4 style="text-align:center; font-size: 1rem; color: red;">Vist of Prof Muhammad Suleman Siyal Director College Education Shaheed benazir Abad Region<br>7-3-25</h4>
             <div class="gallery">
                 <div class="gallery-item">
                     <img src="./gallery/SB1.jpg" alt="Image 1">
