--- a/index.html
+++ b/index.html
@@ -468,32 +468,32 @@ As you move forward in your studies, always remember that education is not just 
 <div class="mySlides fade">
   <div class="numbertext">4 / 9</div>
   <img src="./gallery/SB1.jpg" style="width:100%">
-  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
+  <div class="text">Vist of Prof Muhammad Suleman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">5 / 9</div>
   <img src="./gallery/SB2.jpg" style="width:100%">
-  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
+  <div class="text">Vist of Prof Muhammad Suleman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">6 / 9</div>
   <img src="./gallery/SB3.jpg" style="width:100%">
-  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
+  <div class="text">Vist of Prof Muhammad Suleman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">7 / 9</div>
   <img src="./gallery/SB4.jpg" style="width:100%">
-  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
+  <div class="text">Vist of Prof Muhammad Suleman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">8 / 9</div>
   <img src="./gallery/SB10.jpg" style="width:100%">
-  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
+  <div class="text">Vist of Prof Muhammad Suleman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">9 / 9</div>
   <img src="./gallery/SB11.jpg" style="width:100%">
-  <div class="text">Vist of Prof Muhammad Suliman Siyal Director College Education Shaheed benazir Abad Region</div>
+  <div class="text">Vist of Prof Muhammad Suleman Siyal Director College Education Shaheed benazir Abad Region</div>
 </div>
 
 <a class="prev" onclick="plusSlides(-1)">❮</a>
