--- a/index.html
+++ b/index.html
@@ -403,13 +403,7 @@
 </div>
 
             <div class="scroll-paragraph">
-                <p>it is hereby notified that <br>
-			the pre-board examinations in our college will begin on wednesday 26th march...
-		       <br><br>
-			یہاں سے مطلع کیا جاتا ہے کہ<br>
-			ہمارے کالج میں پری بورڈ امتحانات 26 مارچ بروز بدھ سے شروع ہوں گے۔
-			<br><br>
-			 هتي اطلاع ڏنو وڃي ٿو ته <br>اسان جي ڪاليج ۾ پري بورڊ جا امتحان اربع 26 مارچ تي شروع ٿيندا.
+                <p> welcome to <br>Govt Girls college Daulatpur
                   <div style="width:440px">
   <a href="Notice.html">View more..
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
@@ -418,13 +412,8 @@
 
             <!-- Second paragraph that starts after the first one finishes -->
             <div class="scroll-paragraph-2">
-                 <p>it is hereby notified that <br>
-			the pre-board examinations in our college will begin on wednesday 26th march...
-		       <br><br>
-			یہاں سے مطلع کیا جاتا ہے کہ<br>
-			ہمارے کالج میں پری بورڈ امتحانات 26 مارچ بروز بدھ سے شروع ہوں گے۔
-			<br><br>
-			 هتي اطلاع ڏنو وڃي ٿو ته <br>اسان جي ڪاليج ۾ پري بورڊ جا امتحان اربع 26 مارچ تي شروع ٿيندا.
+                 <p> welcome to <br>Govt Girls college Daulatpur
+			
                    <div style="width:440px">
   <a href="Notice.html">View more..
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
