--- a/Notice.html
+++ b/Notice.html
@@ -13,16 +13,21 @@
 <li class="nav-item"><a class="nav-link text-black" href="CONTACT-US.html">CONTACT US</a></li>
 </ul></div></div></nav>
   
+
+
+  <br><br>
+ <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+    WELCOME TO.<br> Govt Girls College Daulatpur</p>
   
-  <br>
+  
+
+  
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    it is hereby notified that the pre-board examinations in our college will begin on wednesday 26th march.<br>
-    the detailed time table for the examinations is as follows:</p>
+    Classes are held daily, and I urge all students to attend regularly for their academic development.<br> Your consistent participation is key to achieving success</p>
   
   
 
-  <img src="./gallery/preboard.jpg" alt="Description" style="padding-left: 40px; padding-right: 40px;">
-
+ 
   
   
   <footer><div class="container"><div class="footer-grid"><div>
