--- a/Notice.html
+++ b/Notice.html
@@ -17,7 +17,7 @@
 
   <br><br>
  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    WELCOME TO.<br> Govt Girls College Daulatpur</p>
+    WELCOME TO<br> Govt Girls College Daulatpur</p>
   
   
 
