--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -212,7 +212,7 @@
           Practical Activity for class XII MP<br>
           Prof Aijaz Jatoe
         </h4>    
-        <img src="./gallery/pr6.jpg" alt="Different leaves 1">
+        <img src="./gallery/pr6.jpg" alt="image 1">
         <div class="overlay"></div>
         <div class="overlay-message">Right-click is disabled.</div>
       </div>
@@ -225,7 +225,7 @@
           Practical Activity for class XII MP<br>
           Prof Aijaz Jatoe
         </h4>    
-        <img src="./gallery/pr5.jpg" alt="Different leaves 2">
+        <img src="./gallery/pr5.jpg" alt="image 2">
         <div class="overlay"></div>
         <div class="overlay-message">Right-click is disabled.</div>
       </div>
@@ -238,7 +238,7 @@
           Practical Activity for class XII MP<br>
           Prof Aijaz Jatoe
         </h4>    
-        <img src="./gallery/pr4.jpg" alt="Different leaves 3">
+        <img src="./gallery/pr4.jpg" alt="image 3">
         <div class="overlay"></div>
         <div class="overlay-message">Right-click is disabled.</div>
       </div>
@@ -250,7 +250,7 @@
           Practical Activity XII PM<br>
           Study of Mammalian Lungs and Kidney
         </h4>    
-        <img src="./gallery/pr3.jpg" alt="Mammalian organs 1">
+        <img src="./gallery/pr3.jpg" alt="image 1">
         <div class="overlay"></div>
         <div class="overlay-message">Right-click is disabled.</div>
       </div>
@@ -262,7 +262,7 @@
           Practical Activity XII PM<br>
           Study of Mammalian Lungs and Kidney
         </h4>    
-        <img src="./gallery/pr2.jpg" alt="Mammalian organs 2">
+        <img src="./gallery/pr2.jpg" alt="image 2">
         <div class="overlay"></div>
         <div class="overlay-message">Right-click is disabled.</div>
       </div>
@@ -274,7 +274,7 @@
           Practical Activity XII PM<br>
           Study of Mammalian Lungs and Kidney.
         </h4>    
-        <img src="./gallery/pr1.jpg" alt="Mammalian organs 3">
+        <img src="./gallery/pr1.jpg" alt="image 3">
         <div class="overlay"></div>
         <div class="overlay-message">Right-click is disabled.</div>
       </div>
