--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -203,7 +203,8 @@
     </nav>
 <section class="gallery-section">
   <h1 style="text-align: center; margin-bottom: 0.3em;">Govt Girls College Daulatpur</h1>
-
+	
+<div class="gallery-group">
 	<div class="gallery">
                 <div class="gallery-item">
 <h4 style="text-align:center; font-size: 0.7rem; color: red;">Different types of leaves in plants<br> Practical Activity for class XII MP<br> Prof Aijaz Jatoe</h4>
