--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -204,8 +204,21 @@
 <section class="gallery-section">
   <h1 style="text-align: center; margin-bottom: 0.3em;">Govt Girls College Daulatpur</h1>
 	
-<div class="gallery-group">
-
+  <!-- Gallery Group 1 -->
+        <div class="gallery-group">
+            
+			 <h4 style="text-align:center; font-size: 1rem; color: red;">Vist of Prof Muhammad Suleman Siyal Director College Education Shaheed benazir Abad Region<br>7-3-25</h4>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="./gallery/SB1.jpg" alt="Image 1">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
+                <div class="gallery-item">
+                    <img src="./gallery/SB2.jpg" alt="Image 2">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
 	
             <div class="gallery">
                 <div class="gallery-item">
