--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -184,7 +184,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-black active" aria-current="page" href="index.html">HOME</a>
                     </li>
-<li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link text-black" href="Notice.html">DAILY UPDATE</a>
                     </li>
 			
@@ -203,7 +203,8 @@
     </nav>
 <section class="gallery-section">
   <h1 style="text-align: center; margin-bottom: 0.3em;">Govt Girls College Daulatpur</h1>
-	
+ <div class="gallery-group">
+<h4 style="text-align:center; font-size: 1rem; color: red;">Science exhibition projects 2025</h4>
  	
             <div class="gallery">
                 <div class="gallery-item">
@@ -226,8 +227,7 @@
     <img src="./gallery/TB1.jpg" alt="Image 1">
     <div class="overlay"></div>
     <div class="overlay-message">Right-click is disabled.</div>
-</div>
-              		
+</div>      		
 	</div>
         </div>
         <!-- Gallery Group 1 -->
