--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -206,7 +206,11 @@
  <div class="gallery-group">
 <h4 style="text-align:center; font-size: 1rem; color: red;">Science exhibition projects 2025</h4>
  	
-            <div class="gallery">
+		    	 <div class="gallery-item">
+                    <img src="./gallery/SB6.jpg" alt="Image 6">
+                    <div class="overlay"></div>
+                    <div class="overlay-message">Right-click is disabled.</div>
+                </div>
                 <div class="gallery-item">
 <h4 style="text-align:center; font-size: 0.7rem; color: red;">23 March Pakistan Day<br> A seminar held at Govt Girls College Daulatpur<br> Prof Irshad Ali Otho Headed the program as Guest Speaker.</h4>
     
