--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -205,7 +205,7 @@
   <h1 style="text-align: center; margin-bottom: 0.3em;">Govt Girls College Daulatpur</h1>
  <div class="gallery-group">
 <h4 style="text-align:center; font-size: 1rem; color: red;">Science exhibition projects 2025</h4>
- 	
+ 	<div class="gallery">
 		    	 <div class="gallery-item">
                     <img src="./gallery/SB6.jpg" alt="Image 6">
                     <div class="overlay"></div>
