--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -204,10 +204,10 @@
 <section class="gallery-section">
   <h1 style="text-align: center; margin-bottom: 0.3em;">Govt Girls College Daulatpur</h1>
  <div class="gallery-group">
-<h4 style="text-align:center; font-size: 1rem; color: red;">Science exhibition projects 2025</h4>
+<h4 style="text-align:center; font-size: 1rem; color: red;">2025</h4>
  	<div class="gallery">
 		    	 <div class="gallery-item">
-                    <img src="./gallery/SB6.jpg" alt="Image 6">
+                    <img src="./gallery/pr1.jpg" alt="Image 6">
                     <div class="overlay"></div>
                     <div class="overlay-message">Right-click is disabled.</div>
                 </div>
