--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -206,7 +206,41 @@
  <div class="gallery-group">
 <h4 style="text-align:center; font-size: 1rem; color: red;">2025</h4>
  	<div class="gallery">
+		                <div class="gallery-item">
+    <h4 style="text-align:center; font-size: 0.7rem; color: red;">Different types of leaves in plants. Practical Activity for class XII MP<br> Prof Aijaz Jatoe</h4>
+    <img src="./gallery/pr6.jpg" alt="Image 1">
+    <div class="overlay"></div>
+    <div class="overlay-message">Right-click is disabled.</div>
+</div>
+		                <div class="gallery-item">
+<h4 style="text-align:center; font-size: 0.7rem; color: red;">Different types of leaves in plants. Practical Activity for class XII MP<br> Prof Aijaz Jatoe</h4>
+    <img src="./gallery/pr5.jpg" alt="Image 1">
+    <div class="overlay"></div>
+    <div class="overlay-message">Right-click is disabled.</div>
+</div>
+
+		                <div class="gallery-item">
+<h4 style="text-align:center; font-size: 0.7rem; color: red;">Different types of leaves in plants. Practical Activity for class XII MP<br> Prof Aijaz Jatoe</h4>
+    
+    <img src="./gallery/pr4.jpg" alt="Image 1">
+    <div class="overlay"></div>
+    <div class="overlay-message">Right-click is disabled.</div>
+</div>
+                <div class="gallery-item">
+<h4 style="text-align:center; font-size: 0.7rem; color: red;">Practical Activity XII PM study of Mammalian Lungs and Kidney</h4>
+    <img src="./gallery/pr3.jpg" alt="Image 1">
+    <div class="overlay"></div>
+    <div class="overlay-message">Right-click is disabled.</div>
+</div>
+		                <div class="gallery-item">
+<h4 style="text-align:center; font-size: 0.7rem; color: red;">Practical Activity XII PM study of Mammalian Lungs and Kidney</h4>
+    
+    <img src="./gallery/pr2.jpg" alt="Image 1">
+    <div class="overlay"></div>
+    <div class="overlay-message">Right-click is disabled.</div>
+</div>
 		    	 <div class="gallery-item">
+		<h4 style="text-align:center; font-size: 0.7rem; color: red;">Practical Activity XII PM study of Mammalian Lungs and Kidney</h4>
                     <img src="./gallery/pr1.jpg" alt="Image 6">
                     <div class="overlay"></div>
                     <div class="overlay-message">Right-click is disabled.</div>
