--- a/Notice.html
+++ b/Notice.html
@@ -17,14 +17,15 @@
 
   <br><br>
  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    WELCOME TO<br> Govt Girls College Daulatpur</p>
+    NOTIFICATION</p>
   
   
 
   
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    Classes are held daily, and I urge all students to attend regularly for their academic development.<br> Your consistent participation is key to achieving success</p>
-  
+   SCHEDULE FOR HIGHER SECONDARY SCHOOL CERTIFICATE <br>PART I & II (CLASS XI & XII) ANNUAL EXAMINATION, 2025</p>
+  <img src="./gallery/papr11.jpg" alt="Image">
+   <img src="./gallery/papr12.jpg" alt="Image">
   
 
  
