--- a/Notice.html
+++ b/Notice.html
@@ -24,7 +24,8 @@
   
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
    SCHEDULE FOR HIGHER SECONDARY SCHOOL CERTIFICATE <br>PART I & II (CLASS XI & XII) ANNUAL EXAMINATION, 2025</p>
-  <img src="./gallery/papr11.jpg" alt="Image">
+  <img src="./gallery/papr11.jpg" alt="Image" style="margin: 0 20px;">
+  
    <img src="./gallery/papr12.jpg" alt="Image">
   
 
