--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 </div>
 
             <div class="scroll-paragraph">
-                <p> welcome to <br>Govt Girls college Daulatpur
+                <p>NOTIFICATION<br>PART I & II (CLASS XI & XII) ANNUAL EXAMINATION, 2025
                   <div style="width:440px">
   <a href="Notice.html">View more..
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
@@ -412,7 +412,7 @@
 
             <!-- Second paragraph that starts after the first one finishes -->
             <div class="scroll-paragraph-2">
-                 <p> welcome to <br>Govt Girls college Daulatpur
+                 <p>NOTIFICATION<br> PART I & II (CLASS XI & XII) ANNUAL EXAMINATION, 2025
 			
                    <div style="width:440px">
   <a href="Notice.html">View more..
