--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             width: 100%;
             max-width: 800px; /* Match the max width for balance */
             background-color: #fff;
-           
+            padding: 0 20px;
+		
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             position: relative;
