--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto;">
 </div>
 
-            <div class="scroll-paragraph">
-                <p>NOTIFICATION<br>PART I & II (CLASS XI & XII) ANNUAL EXAMINATION, 2025
+<div class="scroll-paragraph" style="padding-right: 20px;">
+                <p>NOTIFICATION<br>PART I & II (CLASS XI & XII) ANNUAL EXAMINATION  2025
                   <div style="width:440px">
   <a href="Notice.html">View more..
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
