--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:100px; height:auto;">
 </div>
 
-<div class="scroll-paragraph" style="padding-right: 40px;">
-                <p>NOTIFICATION<br>PART I & II (CLASS XI & XII) ANNUAL EXAMINATION  2025
+<div class="scroll-paragraph" style="padding-right: 70px;">
+                <p>NOTIFICATION<br>PART I & II (CLASS XI & XII) ANNUAL EXAMINATION <2025
                   <div style="width:440px">
   <a href="Notice.html">View more..
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
@@ -412,7 +412,7 @@
             </div>
 
             <!-- Second paragraph that starts after the first one finishes -->
-            <div class="scroll-paragraph-2">
+		    <div class="scroll-paragraph-2" style="padding-right: 70px;">
                  <p>NOTIFICATION<br> PART I & II (CLASS XI & XII) ANNUAL EXAMINATION, 2025
 			
                    <div style="width:440px">
