--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 </div>
 
 <div class="scroll-paragraph" style="padding-right: 270px;">
-                <p>NOTIFICATION<br>PART I & II (CLASS XI & XII) ANNUAL EXAMINATION 2025
+                <p>NOTIFICATION<br>PART I & II (CLASS XI & XII)<br> ANNUAL EXAMINATION 2025
                   <div style="width:440px">
   <a href="Notice.html">View more..
     <img src="https://pu.edu.pk/images/News/a-new.gif" style="width:70px; height:auto;"> </a></div><br>
@@ -413,7 +413,7 @@
 
             <!-- Second paragraph that starts after the first one finishes -->
 		    <div class="scroll-paragraph-2" style="padding-right: 270px;">
-                 <p>NOTIFICATION<br> PART I & II (CLASS XI & XII) ANNUAL EXAMINATION, 2025
+                 <p>NOTIFICATION<br> PART I & II (CLASS XI & XII)<br> ANNUAL EXAMINATION 2025
 			
                    <div style="width:440px">
   <a href="Notice.html">View more..
