--- a/Notice.html
+++ b/Notice.html
@@ -16,37 +16,21 @@
 
 
   <br><br>
+ <br><br>
  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    NOTIFICATION</p>
+    ADMISSION 2025</p>
   
   
 
   
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-  📢 داخلا جي اطلاع
-گورنمينٽ گرلس ڊگري ڪاليج دولتپور 
-
-شھيد بينظير آباد ضلعي جي سڀني شاگردياڻين ۽ انهن جي والدين کي آگاهي ڏجي ٿي ته:
-
-🎓 ڪلاس يارھين (11th Class) جي داخلا لاءِ آن لائن درخواستون 15 جون 2025 کان شروع ٿي رهيون آهن.
-داخلا سڀني گروپن (پري-ميڊيڪل، پري-انجنيئرنگ، آرٽس وغيره) ۾ ڏني ويندي.
-
-🌐 آن لائن داخلا فارم ڀرڻ لاءِ ويب سائيٽ جو پتو: 👉 www.seccap.dgcs.gos.pk
-
-⏺ ضروري دستاويز:
-
-(1)نائين ڪلاس (9th) جو مارڪس سرٽيفڪيٽ
- (2) 2 تازيون پاسپورٽ سائيز تصويرون
-(3)  مئٽرڪ جي امتحاني سلپ
-(4) بي فارم جي ڪاپي 
-
-
-📍 اهي شاگردياڻيون، جن ميٽرڪ 2025 ۾  امتحان ڏنو آهي، اهي پنهنجا دستاويز کڻي دولتپور گرلس ڊگري ڪاليج اچن ۽ HELP DESK تي رابطو ڪن.
- داخلا جي سهولت مڪمل طور مفت فراهم ڪئي وئي آهي.
-
-
-رابطو: پروفيسر خالد حسين ٻرڙو پرنسيپال گرلس ڊگري ڪاليج دولتپور :03013218163
-عطا محمد مھر :03003230127</p>
+  ڪلاس يارھين جي داخلا لاءِ آن لائن درخواستون 15 جون 2025 کان شروع ٿي رهيون آهن 
+</p>
+    
+  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+  ڪلاس يارھين جي داخلا لاءِ آن لائن درخواستون 15 جون 2025 کان شروع ٿي رهيون آهن 
+</p>
+  
 
 
   <footer><div class="container"><div class="footer-grid"><div>
