--- a/Notice.html
+++ b/Notice.html
@@ -24,13 +24,34 @@
 
   
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-  ڪلاس يارھين جي داخلا لاءِ آن لائن درخواستون 15 جون 2025 کان شروع ٿي رهيون آهن 
+  شھيد بينظير آباد ضلعي جي سڀني شاگردياڻين ۽ انهن جي والدين کي آگاهي ڏجي ٿي ته:
+
 </p>
     
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
   ڪلاس يارھين جي داخلا لاءِ آن لائن درخواستون 15 جون 2025 کان شروع ٿي رهيون آهن 
 </p>
+   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+  داخلا سڀني گروپن (پري-ميڊيڪل، پري-انجنيئرنگ، آرٽس وغيره) ۾ ڏني ويندي.
+</p>
+  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+  http://www.seccap.dgcs.gos.pk آن لائن داخلا فارم ڀرڻ لاءِ ويب سائيٽ جو پتو
+</p>
+   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+  ضروري دستاويز:
+</p>
+<p style="text-align: right; direction: rtl; color: black; padding-right: 1.5em; padding-left: 1.5em; font-size: 1.3rem; font-family: 'Noto Nastaliq Urdu', 'Mehr Nastaleeq', Arial, sans-serif;">
+    1) نائين ڪلاس (۹هين) جو مارڪس سرٽيفڪيٽ<br>
+    2) ٻه (2) تازيون پاسپورٽ سائيز تصويرون <br>
+    3) مئٽرڪ جي امتحاني سلپ<br>
+    4) بي فارم جي ڪاپي
+</p>
+
+
   
+   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+  
+</p>
 
 
   <footer><div class="container"><div class="footer-grid"><div>
