--- a/Notice.html
+++ b/Notice.html
@@ -18,9 +18,13 @@
   <br><br>
  <br><br>
  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    ADMISSION 2025</p>
+    ADMISSION 2025<br>
+   داخلا جي اطلاع
+
+ </p>
   
-  
+   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+    گورنمينٽ گرلس ڊگري ڪاليج دولتپور </p>
 
   
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
@@ -40,19 +44,27 @@
    <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
   ضروري دستاويز:
 </p>
-<p style="text-align: right; direction: rtl; color: black; padding-right: 1.5em; padding-left: 1.5em; font-size: 1.3rem; font-family: 'Noto Nastaliq Urdu', 'Mehr Nastaleeq', Arial, sans-serif;">
+<p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
     1) نائين ڪلاس (۹هين) جو مارڪس سرٽيفڪيٽ<br>
     2) ٻه (2) تازيون پاسپورٽ سائيز تصويرون <br>
     3) مئٽرڪ جي امتحاني سلپ<br>
     4) بي فارم جي ڪاپي
 </p>
 
-
-  
    <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-  
+   اهي شاگردياڻيون، جن ميٽرڪ 2025 ۾  امتحان ڏنو آهي، اهي پنهنجا دستاويز کڻي
 </p>
 
+   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+   تي رابطو ڪن. HELP DESK دولتپور گرلس ڊگري ڪاليج اچن ۽ 
+</p>
+   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+    داخلا جي سهولت مڪمل طور مفت فراهم ڪئي وئي آهي
+</p>
+   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+     03013218163 : رابطو: پروفيسر خالد حسين ٻرڙو پرنسيپال گرلس ڊگري ڪاليج دولتپور <br>
+     03003230127 : عطا محمد مھر
+</p>
 
   <footer><div class="container"><div class="footer-grid"><div>
     <h2>About</h2>
