--- a/Notice.html
+++ b/Notice.html
@@ -28,7 +28,7 @@
 
   
   <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-  شھيد بينظير آباد ضلعي جي سڀني شاگردياڻين ۽ انهن جي والدين کي آگاهي ڏجي ٿي ته:
+  شھيد بينظير آباد ضلعي جي سڀني شاگردياڻين ۽ انهن جي والدين کي آگاهي ڏجي ٿي ته
 
 </p>
     
@@ -36,11 +36,9 @@
   ڪلاس يارھين جي داخلا لاءِ آن لائن درخواستون 15 جون 2025 کان شروع ٿي رهيون آهن 
 </p>
    <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-  داخلا سڀني گروپن (پري-ميڊيڪل، پري-انجنيئرنگ، آرٽس وغيره) ۾ ڏني ويندي.
+  داخلا سڀني گروپن (پري-ميڊيڪل، پري-انجنيئرنگ، آرٽس وغيره) ۾ ڏني ويندي
 </p>
-  <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-  http://www.seccap.dgcs.gos.pk آن لائن داخلا فارم ڀرڻ لاءِ ويب سائيٽ جو پتو
-</p>
+ 
 <p style="text-align: center; color: black; padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
   <a href="http://www.seccap.dgcs.gos.pk" target="_blank" style="color: black; text-decoration: underline;">
     http://www.seccap.dgcs.gos.pk
