--- a/Notice.html
+++ b/Notice.html
@@ -51,10 +51,10 @@
   ضروري دستاويز:
 </p>
 <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-    1) نائين ڪلاس (۹هين) جو مارڪس سرٽيفڪيٽ<br>
-    2) ٻه (2) تازيون پاسپورٽ سائيز تصويرون <br>
-    3) مئٽرڪ جي امتحاني سلپ<br>
-    4) بي فارم جي ڪاپي
+     نائين ڪلاس (۹هين) جو مارڪس سرٽيفڪيٽ .i<br>
+     ٻه (2) تازيون پاسپورٽ سائيز تصويرون .ii <br>
+     مئٽرڪ جي امتحاني سلپ .iii <br>
+     بي فارم جي ڪاپي .iv
 </p>
 
    <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
