--- a/Notice.html
+++ b/Notice.html
@@ -51,7 +51,7 @@
   ضروري دستاويز:
 </p>
 <p style="text-align: center; color: black;padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-     نائين ڪلاس (۹هين) جو مارڪس سرٽيفڪيٽ .i<br>
+     نائين ڪلاس (9) جو مارڪس سرٽيفڪيٽ .i<br>
      ٻه (2) تازيون پاسپورٽ سائيز تصويرون .ii <br>
      مئٽرڪ جي امتحاني سلپ .iii <br>
      بي فارم جي ڪاپي .iv
