--- a/Notice.html
+++ b/Notice.html
@@ -41,7 +41,7 @@
  
 <p style="text-align: center; color: black; padding-left: 1.5em; padding-right: 1.5em; font-size: 1.3rem; font-family: Arial, sans-serif;">
   <a href="http://www.seccap.dgcs.gos.pk" target="_blank" style="color: black; text-decoration: underline;">
-    http://www.seccap.dgcs.gos.pk
+    www.seccap.dgcs.gos.pk
   </a>
   آن لائن داخلا فارم ڀرڻ لاءِ ويب سائيٽ جو پتو
 </p>
